@@ -33,7 +33,7 @@ __language__ = __addon__.getLocalizedString
 __set__ = __addon__.getSetting
 
 settings = {'downloads': __set__('downloads'), 'quality': __set__(
-    'quality'), 'subs': __set__('subs') == 'true'}
+    'quality'), 'subs': __set__('subs') == 'true', 'lang': __set__('language')}
 
 
 reverse_eps = __set__('order-episodes') == '0'
