@@ -27,6 +27,10 @@
     <string id="30057">Řazení epizod</string>
     <string id="30058">Od nejstarších</string>
     <string id="30059">Od nejnovějších</string>
+    <string id="30060">Jazyk videa</string>
+    <string id="30061">Nezáleží</string>
+    <string id="30062">Anglicky</string>
+    <string id="30063">Česky</string>
     <string id="30100">Složka pro filmy</string>
     <string id="30101">Složka pro seriály</string>
     <string id="30102">Opozdit start služby o (hodiny)</string>
